# gameoflife

./: .gitignore  README.md  pyproject.toml
src/: main.py  menu.py  render.py  test.py
src/tests/: test.py  tests.py
src/utils/: config.py  menu.py  pretty_title.py  render.py
