[project]
name = "game-of-life"
version = "1.0.0"
description = "A terminal-based implementation of Conway's Game of Life with configurable settings and UI menu."
authors = [
    { name = "Kobi Kuzi", email = "Kobi070@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "pyfiglet>=1.0.1",  # Assuming pretty_title uses prettytable
]

[project.scripts]
game-of-life = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
